tree-sitter-dform/test/corpus/repo/crates__dform-mock__schemas__aws-mock.externs.txt
=============================================
crates/dform-mock/schemas/aws-mock.externs.df
=============================================

# The aws mock's answers to its data source,
# aws.availability_zone(+state, -name, -index: int) (R-36): one row per
# zone, its index the zone's position among the names sorted, so a plan
# never reshuffles.

edition 2026

aws.availability_zone("available", "us-east-1a", 0)
aws.availability_zone("available", "us-east-1b", 1)
aws.availability_zone("available", "us-east-1c", 2)

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (edition
    (integer))
  (fact
    (call
      (member_expression
        (identifier)
        (identifier))
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (integer))))
  (fact
    (call
      (member_expression
        (identifier)
        (identifier))
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (integer))))
  (fact
    (call
      (member_expression
        (identifier)
        (identifier))
      (arguments
        (string
          (string_content))
        (string
          (string_content))
        (integer)))))
